Replace script reference from hypotrochoid_web_sketch.js to sketch.js

--- a/index.html
+++ b/index.html
@@ -198,6 +198,6 @@
       </div>
     </div>
 
-  <script src="hypotrochoid_web_sketch.js"></script>
+  <script src="sketch.js"></script>
 </body>
 </html>
