--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
       display: block;
       margin-bottom: 4px;
     }
+    .info-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 14px;
+      height: 14px;
+      margin-left: 4px;
+      font-size: 11px;
+      font-style: italic;
+      font-weight: 600;
+      color: #888;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      cursor: help;
+      vertical-align: middle;
+    }
+    .info-icon:hover {
+      color: #aaa;
+      background: rgba(255, 255, 255, 0.15);
+    }
     #freqs {
       width: 220px;
       padding: 4px 6px;
@@ -97,7 +117,7 @@
     .rho-ticks {
       display: flex;
       justify-content: space-between;
-      width: 200px;
+      width: 180px;
       font-size: 10px;
       color: #aaa;
     }
@@ -114,6 +134,34 @@
     .rho-play.active {
       border-color: #3b82f6;
       background: #1e3a8a;
+    }
+    .rho-speed {
+      display: flex;
+      align-items: center;
+    }
+    .rho-speed-row {
+      display: flex;
+      align-items: center;
+      gap: 2px;
+    }
+    .rho-speed-btn {
+      border: 1px solid #555;
+      background: #222;
+      color: #ccc;
+      font-size: 10px;
+      padding: 2px 4px;
+      border-radius: 3px;
+      cursor: pointer;
+      line-height: 1;
+    }
+    .rho-speed-btn:hover {
+      background: #333;
+    }
+    .rho-speed-value {
+      font-size: 11px;
+      color: #eee;
+      min-width: 2.5em;
+      text-align: center;
     }
     .step-grid {
       display: grid;
@@ -156,7 +204,7 @@
 </head>
 <body>
     <div id="ui">
-      <label for="freqs">Frequency ratios (comma or space separated)</label>
+      <label for="freqs">Frequency ratios <span class="info-icon" title="Controls the ratios between the angular velocities of the vectors. Separate values with comma or space.">i</span></label>
       <input id="freqs" type="text" value="0.5, 0.3, 1/3" />
       <label>Length ratios</label>
       <label for="randomRhos">
